# BayesX

./: .gitattributes  .gitignore  Makefile  README  README.md  infile13996_255by256by433.inp  infile13996_255by256by433poly.inp  infile64by64by32.inp  infiletest-fixed.inp  infiletest-unfixed.inp  mask_in.txt
infiles/: infile-auto-fixed.inp  infile-tng.inp  (+9 more)
scripts/pybayesx/: LICENSE  binning.py  bintest.ipynb  config.py  input_data.py  model.py  new_pybayesx.py  plot.py  prior.py  priors.py  pybayesx.py  pyproject.toml  run.py
scripts/pybayesx/PyBayesX.egg-info/: SOURCES.txt
scripts/pybayesx/apidoc/: conf.py
scripts/pybayesx/apidoc/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pybayesx.html  search.html  searchindex.js
scripts/pybayesx/apidoc/_build/.doctrees/: environment.pickle  index.doctree  pybayesx.doctree
scripts/pybayesx/apidoc/_build/_modules/: index.html  pathlib.html
scripts/pybayesx/apidoc/_build/_sources/: index.rst.txt  pybayesx.rst.txt
scripts/pybayesx/docs/: Makefile  requirements.txt
scripts/pybayesx/docs/source/: conf.py  gettingstarted.rst  index.rst  modules.rst  pybayesx.binning.rst  pybayesx.config.rst  pybayesx.input_data.rst  pybayesx.model.rst  pybayesx.plot.rst  pybayesx.pybayesx.rst  pybayesx.rst
scripts/pybayesx/pybayesx/: __init__.py  analysis.py  binning.py  bintest.ipynb  config.py  data.py  input.py  input_data.py  mask.py  model.py  new_pybayesx.py  plot.py  priors.py  pybayesx.py  report.py  run.py  scripts.py
scripts/pybayesx/pybayesx/PyBayesX.egg-info/: PKG-INFO  top_level.txt
(+81 files in other folders)
