[project]
name = "PyBayesX"
version = "0.4.2"
description = "Wrapper about BayesX to aid in data preparation and automated analysis."
dependencies = [
    "numpy ~= 1.24",
    "astropy ~= 5.2",
    "getdist ~= 1.4",
    "scipy ~= 1.10"
]
license = {file = "LICENSE"}
authors = [{name = "Ryan Cox", email = "ryan.cox@vuw.ac.nz"}]

[project.scripts]
pbx = "pybayesx:scripts.main"

[project.optional-dependencies]
plots = [
  'matplotlib ~= 3.7',
]